samples/_failures_safe/1761004857_31d6be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27dd6aac.c: In function ‘main’:
./samples/SAFE/__tmp_27dd6aac.c:167:12: error: missing terminating " character
  167 |     printf("Testing with
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_27dd6aac.c:167:5: error: expected expression at end of input
  167 |     printf("Testing with
      |     ^~~~~~
./samples/SAFE/__tmp_27dd6aac.c:167:5: error: expected declaration or statement at end of input
